# shell-grid

./: CHANGELOG.md  CMakeLists.txt  README.md
include/: shell-grid.h
include/shell-grid/: cell-type.h  cell.h  grid.h
src/: cell.cpp  grid.cpp
src/cell/: null.cpp  string.cpp
tests/: main.cpp
